--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
+    "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.0",
+    "@types/webpack-env": "^1.15.2",
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "sweetalert2": "^9.14.4",
     "typescript": "~3.7.2"
   },
   "scripts": {
